# serializer version: 1
# name: test_snapshot[device_names0]
  dict({
    'control': dict({
    }),
    'entity_info': dict({
      'household_id': 7777,
      'id': 123455,
      'name': 'Maui',
      'parent_device_id': None,
      'photo': dict({
        'created_at': datetime.datetime(2023, 10, 3, 15, 18, 9, tzinfo=TzInfo(0)),
        'hash': 'UCcarrDHzX0MkjEORQqCXNLKxsdweCQPJjl3OQ7s',
        'id': 623733,
        'location': 'https://userimages.production.surehub.io/thm/3139194472/UCcarrDHzX0MkjEORQqCXNLKxsdweCQPJjl3OQ7s.jpg',
        'title': '1696346281223-cropped.jpg?1696346286094',
        'updated_at': datetime.datetime(2023, 10, 3, 15, 18, 9, tzinfo=TzInfo(0)),
        'uploading_user_id': 3139194472,
        'version': 0,
      }),
      'product_id': 0,
      'tag': dict({
        'created_at': datetime.datetime(2019, 9, 4, 20, 28, 11, tzinfo=TzInfo(0)),
        'id': 60978,
        'supported_product_ids': list([
          3,
          4,
          6,
          8,
          10,
          32,
        ]),
        'tag': '752.093200030403',
        'updated_at': datetime.datetime(2020, 3, 11, 14, 21, 7, tzinfo=TzInfo(0)),
        'version': 1,
      }),
      'tag_id': 60978,
    }),
    'properties': dict({
      'available': True,
      'household_id': 7777,
      'id': 123455,
      'name': 'Maui',
      'photo': 'https://userimages.production.surehub.io/thm/3139194472/UCcarrDHzX0MkjEORQqCXNLKxsdweCQPJjl3OQ7s.jpg',
      'product': <ProductId.PET: 0>,
      'product_id': 0,
      'product_name': 'PET',
      'tag': 60978,
    }),
    'status': dict({
      'activity': dict({
        'device_id': None,
        'id': None,
        'pet_id': None,
        'since': None,
        'tag_id': None,
        'user_id': None,
        'where': None,
      }),
      'devices': dict({
        'count': 3,
        'items': list([
          dict({
            'created_at': datetime.datetime(2025, 9, 17, 17, 12, 47, tzinfo=TzInfo(0)),
            'device_id': None,
            'id': 269654,
            'index': 2,
            'profile': <PetDeviceLocationProfile.NO_RESTRICTION: 2>,
            'updated_at': datetime.datetime(2025, 9, 17, 17, 12, 47, tzinfo=TzInfo(0)),
            'version': 1,
          }),
          dict({
            'created_at': datetime.datetime(2025, 7, 13, 11, 14, 42, tzinfo=TzInfo(0)),
            'device_id': None,
            'id': 271836,
            'index': 2,
            'profile': <PetDeviceLocationProfile.NO_RESTRICTION: 2>,
            'updated_at': datetime.datetime(2025, 7, 13, 11, 14, 42, tzinfo=TzInfo(0)),
            'version': 1,
          }),
          dict({
            'created_at': datetime.datetime(2025, 4, 25, 19, 0, 40, tzinfo=TzInfo(0)),
            'device_id': None,
            'id': 1181149,
            'index': 1,
            'profile': <PetDeviceLocationProfile.NO_RESTRICTION: 2>,
            'updated_at': datetime.datetime(2025, 4, 25, 19, 0, 40, tzinfo=TzInfo(0)),
            'version': 1,
          }),
        ]),
      }),
      'drinking': dict({
        'at': None,
        'change': None,
        'device_id': None,
        'id': None,
        'tag_id': None,
      }),
      'feeding': dict({
        'at': datetime.datetime(2025, 9, 16, 19, 42, 53, tzinfo=TzInfo(0)),
        'change': list([
          -3.23,
          0,
        ]),
        'device_id': 269654,
        'id': 1210761432,
        'tag_id': 2039802,
      }),
      'last_activity': dict({
        'at': datetime.datetime(2025, 9, 16, 19, 42, 53, tzinfo=TzInfo(0)),
        'device_id': 269654,
      }),
    }),
    'timezone': 'Europe/Stockholm',
  })
# ---
# name: test_snapshot[device_names0].1
  dict({
    'control': dict({
    }),
    'entity_info': dict({
      'household_id': 7777,
      'id': 629768,
      'name': 'Fionna',
      'parent_device_id': None,
      'photo': dict({
        'created_at': datetime.datetime(2025, 2, 28, 15, 34, 12, tzinfo=TzInfo(0)),
        'hash': 'R01qBHfrNHNkeMiNQrtfgoWlOtUGj8TqTCzgyUZPsI',
        'id': 820465,
        'location': 'https://userimages.production.surehub.io/thm/XXXXXXXXX/R01qBHfrNHNkeMiNQrtfgoWlOtUGj8TqTCzgyUZPsI.jpg',
        'title': None,
        'updated_at': None,
        'uploading_user_id': 9999999,
        'version': 0,
      }),
      'product_id': 0,
      'tag': dict({
        'created_at': datetime.datetime(2025, 2, 28, 13, 34, 39, tzinfo=TzInfo(0)),
        'id': 1725049,
        'supported_product_ids': list([
          3,
          4,
          6,
          8,
          10,
          32,
        ]),
        'tag': '756.098101172569',
        'updated_at': None,
        'version': 0,
      }),
      'tag_id': 1725049,
    }),
    'properties': dict({
      'available': True,
      'household_id': 7777,
      'id': 629768,
      'name': 'Fionna',
      'photo': 'https://userimages.production.surehub.io/thm/XXXXXXXXX/R01qBHfrNHNkeMiNQrtfgoWlOtUGj8TqTCzgyUZPsI.jpg',
      'product': <ProductId.PET: 0>,
      'product_id': 0,
      'product_name': 'PET',
      'tag': 1725049,
    }),
    'status': dict({
      'activity': dict({
        'device_id': None,
        'id': 5045077041,
        'pet_id': 629768,
        'since': datetime.datetime(2025, 9, 11, 10, 36, 59, tzinfo=TzInfo(0)),
        'tag_id': 1725049,
        'user_id': 9999999,
        'where': <PetLocation.INSIDE: 1>,
      }),
      'devices': dict({
        'count': 1,
        'items': list([
          dict({
            'created_at': datetime.datetime(2025, 9, 17, 17, 12, 47, tzinfo=TzInfo(0)),
            'device_id': None,
            'id': 269654,
            'index': 2,
            'profile': <PetDeviceLocationProfile.NO_RESTRICTION: 2>,
            'updated_at': datetime.datetime(2025, 9, 17, 17, 12, 47, tzinfo=TzInfo(0)),
            'version': 1,
          }),
        ]),
      }),
      'drinking': dict({
        'at': None,
        'change': None,
        'device_id': None,
        'id': None,
        'tag_id': None,
      }),
      'feeding': dict({
        'at': datetime.datetime(2025, 9, 16, 19, 42, 53, tzinfo=TzInfo(0)),
        'change': list([
          -3.23,
          0,
        ]),
        'device_id': 269654,
        'id': 1210761432,
        'tag_id': 2039802,
      }),
      'last_activity': dict({
        'at': datetime.datetime(2025, 9, 16, 19, 42, 53, tzinfo=TzInfo(0)),
        'device_id': 269654,
      }),
    }),
    'timezone': 'Europe/Stockholm',
  })
# ---
